# DataStructure

./: CMakeLists.txt  README.md
DynamicArray/: dynamicArray.c  dynamicArray.h  main.c  myString.c  myString.h  object.c  object.h  primitiveObject.c  primitiveObject.h
Inheritance/: Object.c  Object.h  README.md  main.c
KernelLinkedList/: README.md  main.c
dynamicArray/: README.md  data.c  data.h  dynamicArray.c  dynamicArray.h  main.c  object.c  object.h
final/: 10th_week.c  11th_week.c  12th_week.c  13th_week.c  15th_week.c  9th_week.c  final_quiz_solve.md
